--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -4,6 +4,9 @@
   justify-content: space-between;
   padding: 1rem 1.5rem;
   background-color: #fff;
+  z-index: 1;
+  position: sticky;
+  top: 0;
 }
 .header-logo {
   font-size: 1.25rem;
