--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -9,10 +9,10 @@
   display: flex;
   align-items: flex-start;
   justify-content: center;
-  position: relative;
-  max-height: 500px;
+  position: relative;  
   overflow-y: auto;
   scroll-behavior: smooth;
+  margin: auto;
 }
 .home-img-block {
   display: flex;
@@ -26,6 +26,7 @@
   top: 0;
   padding-right: 1rem;
 }
+
 .home-image-wrapper::-webkit-scrollbar-track {
   -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
   background-color: #f5f5f5;
@@ -53,6 +54,8 @@
   width: 100%;
   padding-top: 3rem;
   box-sizing: border-box;
+  margin-top: 4rem;
+  background: white;
 }
 .footer-name-wrap {
   display: flex;
@@ -92,7 +95,7 @@
   font-size: 0.875rem;
   font-weight: 400;
   text-transform: uppercase;
-  padding-top: 1.5rem;
+  /* padding-top: 1.5rem; */
 }
 .footer-author span {
   text-decoration: underline;
